[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nambu-code"
version = "0.1.0"
description = "A Nambu-bracket-based 3D MHD solver with optional metriplectic dissipation."
authors = [
  { name="kento", email="kentbarbey2598@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyfftw",        # optional but speeds up FFTs
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

